--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Hoverboard</title>
   </head>
   <body>
+    <div class="container" id="container"></div>
     <script src="app.js"></script>
   </body>
 </html>
