Added colors cheme one to choose

--- a/index.html
+++ b/index.html
@@ -10,6 +10,34 @@
     <title>Hoverboard</title>
   </head>
   <body>
+    <div class="control-panel">
+      <h1>Choose color scheme</h1>
+      <div class="scheme">
+        <button>Color scheme one</button>
+        <div class="color-row">
+          <div
+            class="color-preview"
+            style="background-color: #ff6633"
+          ></div>
+          <div
+            class="color-preview"
+            style="background-color: #ffb399"
+          ></div>
+          <div
+            class="color-preview"
+            style="background-color: #ff33ff"
+          ></div>
+          <div
+            class="color-preview"
+            style="background-color: #ffff99"
+          ></div>
+          <div
+            class="color-preview"
+            style="background-color: #00b3e6"
+          ></div>
+        </div>
+      </div>
+    </div>
     <div class="container" id="container"></div>
     <script src="app.js"></script>
   </body>
