--- a/index.html
+++ b/index.html
@@ -37,6 +37,56 @@
           ></div>
         </div>
       </div>
+      <div class="scheme">
+        <button>Color scheme two</button>
+        <div class="color-row">
+          <div
+            class="color-preview"
+            style="background-color: #e6b333"
+          ></div>
+          <div
+            class="color-preview"
+            style="background-color: #3366e6"
+          ></div>
+          <div
+            class="color-preview"
+            style="background-color: #999966"
+          ></div>
+          <div
+            class="color-preview"
+            style="background-color: #99ff99"
+          ></div>
+          <div
+            class="color-preview"
+            style="background-color: #b34d4d"
+          ></div>
+        </div>
+      </div>
+      <div class="scheme">
+        <button>Color scheme three</button>
+        <div class="color-row">
+          <div
+            class="color-preview"
+            style="background-color: #80b300"
+          ></div>
+          <div
+            class="color-preview"
+            style="background-color: #ff3380"
+          ></div>
+          <div
+            class="color-preview"
+            style="background-color: #e6b3b3"
+          ></div>
+          <div
+            class="color-preview"
+            style="background-color: #6680b3"
+          ></div>
+          <div
+            class="color-preview"
+            style="background-color: #9900b3"
+          ></div>
+        </div>
+      </div>
     </div>
     <div class="container" id="container"></div>
     <script src="app.js"></script>
