Added buttons and styled

--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
           ></div>
         </div>
       </div>
+      <h2>Choose the termination method</h2>
+      <button class="termination-button">
+        Image disappears after 5 seconds
+      </button>
+      <button class="termination-button">
+        Delete the image manually
+      </button>
     </div>
     <div class="container" id="container"></div>
     <script src="app.js"></script>
