--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="control-panel">
       <h1>Choose color scheme</h1>
       <div class="scheme">
-        <button>Color scheme one</button>
+        <button id="buttonOne">
+          Color scheme one
+        </button>
         <div class="color-row">
           <div
             class="color-preview"
@@ -38,7 +40,9 @@
         </div>
       </div>
       <div class="scheme">
-        <button>Color scheme two</button>
+        <button id="buttonTwo">
+          Color scheme two
+        </button>
         <div class="color-row">
           <div
             class="color-preview"
@@ -63,7 +67,9 @@
         </div>
       </div>
       <div class="scheme">
-        <button>Color scheme three</button>
+        <button id="buttonThree">
+          Color scheme three
+        </button>
         <div class="color-row">
           <div
             class="color-preview"
@@ -88,10 +94,16 @@
         </div>
       </div>
       <h2>Choose the termination method</h2>
-      <button class="termination-button">
+      <button
+        class="termination-button"
+        id="timeterminationbutton"
+      >
         Image disappears after 5 seconds
       </button>
-      <button class="termination-button">
+      <button
+        class="termination-button"
+        id="deletebutton"
+      >
         Delete the image manually
       </button>
     </div>
