Added delete button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           ></div>
           <div
             class="color-preview"
-            style="background-color: #ff33ff"
+            style="background-color: #2c786c"
           ></div>
           <div
             class="color-preview"
@@ -94,12 +94,10 @@
         </div>
       </div>
       <h2>Choose the termination method</h2>
-      <button
-        class="termination-button"
-        id="timeterminationbutton"
-      >
-        Image disappears after 5 seconds
-      </button>
+      <p>
+        Image disappears automatically after 5
+        seconds, or
+      </p>
       <button
         class="termination-button"
         id="deletebutton"
